--- a/views/partials/admin/header.ejs
+++ b/views/partials/admin/header.ejs
@@ -10,6 +10,11 @@
 <!-- SweetAlert2 JavaScript -->
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
+<!-- Cropper.js CSS -->
+<link href="
+https://cdn.jsdelivr.net/npm/cropperjs@1.6.2/dist/cropper.min.css
+" rel="stylesheet">
+
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
 <link rel="stylesheet" href="/admin/admin-styles.css">
