--- a/views/partials/admin/header.ejs
+++ b/views/partials/admin/header.ejs
@@ -29,6 +29,7 @@ https://cdn.jsdelivr.net/npm/cropperjs@1.6.2/dist/cropper.min.css
                 <li><a href="/admin">Dashboard</a></li>
                 <li><a href="/admin/users">User Management</a></li>
                 <li><a href="#product-management">Product Management</a></li>
+                <li><a href="/admin/brands">Brand Management</a></li>
                 <li><a href="/admin/category">Category Management</a></li>
                 <li><a href="#offer-management">Offer Management</a></li>
                 <li><a href="#coupon-management">Coupon Management</a></li>
