--- a/views/admin/customers.ejs
+++ b/views/admin/customers.ejs
@@ -25,7 +25,7 @@
                         </div>
                     </div>
                 </form>
-                <div| class="table-responsive">
+                <div class="table-responsive">
                     <table class="table table-striped">
                         <thead>
                             <tr>
