--- a/views/admin/admin-login.ejs
+++ b/views/admin/admin-login.ejs
@@ -101,9 +101,9 @@
               <label for="password" class="form-label">Password</label>
               <input type="password" class="form-control" id="password" name="password" required placeholder="Enter password">
             </div>
-            <div class="forgot-password">
+            <!-- <div class="forgot-password">
               <a href="#">Forgot Password?</a>
-            </div>
+            </div> -->
             <% if(locals.message && message.length >0){ %>
               <div class="alert alert-danger text-center">
                 <%= message %>
