--- a/views/partials/admin/header.ejs
+++ b/views/partials/admin/header.ejs
@@ -11,9 +11,7 @@
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
 <!-- Cropper.js CSS -->
-<link href="
-https://cdn.jsdelivr.net/npm/cropperjs@1.6.2/dist/cropper.min.css
-" rel="stylesheet">
+<link href="https://cdn.jsdelivr.net/npm/cropperjs@1.6.2/dist/cropper.min.css" rel="stylesheet">
 
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
@@ -28,12 +26,12 @@ https://cdn.jsdelivr.net/npm/cropperjs@1.6.2/dist/cropper.min.css
             <ul>
                 <li><a href="/admin">Dashboard</a></li>
                 <li><a href="/admin/users">User Management</a></li>
-                <li><a href="#product-management">Product Management</a></li>
+                <li><a href="/admin/products">Product Management</a></li>
                 <li><a href="/admin/brands">Brand Management</a></li>
                 <li><a href="/admin/category">Category Management</a></li>
-                <li><a href="#offer-management">Offer Management</a></li>
-                <li><a href="#coupon-management">Coupon Management</a></li>
-                <li><a href="#order-management">Order Management</a></li>
+                <li><a href="/admin/offers">Offer Management</a></li>
+                <li><a href="/admin/coupons">Coupon Management</a></li>
+                <li><a href="/admin/orders">Order Management</a></li>
                 <li><a href="#sales-report">Sales Report</a></li>
             </ul>
         </nav>
