--- a/views/partials/user/footer.ejs
+++ b/views/partials/user/footer.ejs
@@ -5,7 +5,9 @@
       <div class="row text-center text-md-start">
         <!-- Column 1: Logo -->
         <div class="col-md-3 mb-4 mb-md-0 text-center">
+          <a href="/">
           <img src="pedalist-logo.png" alt="Pedalist Logo" class="img-fluid mb-3">
+        </a>
         </div>
         <!-- Column 2: List with Heading -->
         <div class="col-md-3 mb-4 mb-md-0">
